tests/neg/toplevel-cyclic/moredefs_1.scala
type B = A  // error: illegal cyclic reference
